--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,31 +2,21 @@
 <html>
 
 <head>
-    <style>
-        body {
-            background: skyblue;
-            font-family: verdana;
-            color: #fff;
-            padding: 30px;
-        }
-
-        h1 {
-            font-size: 48px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            text-align: center;
-        }
-
-        p {
-            font-size: 16px;
-            text-align: center;
-        }
-    </style>
+    <link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <h1>Welcome to the most awesome website on the net</h1>
-    <p>You won't find a website better anywhere else!</p>
+    <% include partials/nav.ejs %>
+    <h1>Welcome to the profile of <%= person %></h1>
+    <p><strong>Age: </strong><%= data.age%></p>
+    <p><strong>Job: </strong><%= data.job%></p>
+    <h2>Hobbies</h2>
+    <ul>
+        <% data.hobbies.forEach(function(item){ %>
+            <li><%= item %></li>
+
+       <% }); %>
+    </ul>
 </body>
 
 </html>
